<resources>
    <string name="app_name">Welfast</string>
    <string name="splash">splash</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="otp">otp</string>
    <string name="search">Search by Doctors</string>
    <string name="searchSpecialization">Search by Specialization</string>
    <string name="assessment">Assessment</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="prescription">Prescription</string>
    <string name="visitInfo">Visit Info</string>
    <string name="patientInfo">Patient Info</string>
    <string name="Doctors">Doctors</string>
    <string name="health_package">Health Package</string>
    <string name="viewProfile">View Profile</string>
    <string name="bookings">bookings</string>
    <string name="home">Home</string>
    <string name="neww">New</string>
    <string name="appointment">Appointment</string>
    <string name="bookAppointment">Book Appointment</string>
    <string name="resend"><u>Resend Code</u></string>
    <string name="logIn">Log In</string>
    <string name="back">back</string>
    <string name="time">time</string>
    <string name="sampleTime">Mon,Wed,Fri - 8.30am-9.30am</string>
    <string name="sampleParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</string>
    <string name="sampleParagraphSmall">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</string>
    <string name="degree">degree</string>
    <string name="degreee">Degree        :</string>
    <string name="profilePic">profilePic</string>
    <string name="name">Name</string>
    <string name="nameBA">Name :</string>
    <string name="nameV">Name          :</string>
    <string name="button">button</string>
    <string name="sampleName">Dr. Jessica</string>
    <string name="samplePhone">+91 856479683</string>
    <string name="opNumber">123456789</string>
    <string name="opId">OP ID :</string>
    <string name="age">Age :</string>
    <string name="Age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="website"><u>www.welfastclinic.com</u></string>
    <string name="email">Email</string>
    <string name="emailId"><u>infowelfast@gmail.com</u></string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="blood">Blood Group</string>
    <string name="degrees">Degrees: MBBS, MD, DNB</string>
    <string name="relation">Relationship :</string>
    <string name="designation">Designation</string>
    <string name="sampleDesignation">General Medicine, Plastic surgery</string>
    <string name="sampleDesignationSmall">General Medicine</string>
    <string name="newPatient">New Patient</string>
    <string name="choosePatient">Choose Patients</string>
    <string name="didNotReceive">Didn’t receive OTP?</string>
    <string name="enterPhone">Enter Phone Number</string>
    <string name="editProfile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="contactUs">Contact Us</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="aboutWelfast">About Welfast</string>
    <string name="logOut">Log Out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="medicalReport">Medical Report</string>
    <string name="seeDetails">See Details</string>
    <string name="allDoctors">All Doctors</string>
    <string name="selectPackage">Select a checkup packages</string>
    <string name="roadMap">Road Map</string>
    <string name="address">Thannickal Arcade,\nK.K.Road, Vadavathoor – 686010,\nKottayam, Kerala</string>
    <string name="cell">Cell              :  756-100-1000</string>
    <string name="landline">Land Line 1 : 0481-257-3278(257-FAST)</string>
    <string name="landline2">Land Line 2 :  0481-257-3279</string>
    <string name="success">Appointment Booked\nSuccessfully !</string>
    <string name="specialty">Specialty     :</string>
    <string name="visitingTime">Visiting Time :</string>
    <string name="contactNumber">Contact Number: (Please enter a 10 digit mobile number)</string>
    <string name="contactEmail">Contact email if any:(example @gmail.com)</string>
    <string name="patientNumber">Patient Number if any:</string>
    <string name="Specialization">Specialization</string>
    <string name="doctors">Doctors</string>
    <string name="appointmentDate">Appointment Date</string>
    <string name="appointmentTime">Appointment Time</string>
    <string name="save">Save Changes</string>
    <string name="cannotBeEmpty">This field cannot be empty</string>
    <string name="addresss">Address</string>
    <string name="genderMR">Gender : </string>
    <string name="validEmail">Enter a valid email</string>
    <string name="one">1</string>
    <string name="drugName">DICLOFENAC+LINSEED OIL+METHYL SALICYLATE+MENTHOL</string>
    <string name="doseValue">42 tabs, 1-1-1, for 2 \nweeks, before food.</string>
    <string name="slNo">No.</string>
    <string name="drug">Brand Name</string>
    <string name="dose">Instructions</string>
    <string name="docName">"Doctor ’ s Name : "</string>
    <string name="visitDate">"Visit Date : "</string>
    <string name="patientName">"Patient Name : "</string>
    <string name="ageMR">"Age : "</string>
    <string name="docNote">Doctor’s Note:</string>
    <string name="prescriptionDetails">Prescription Details</string>
    <string name="visitingTimeHome">"Visit Date : "</string>
    <string name="doctorsNameHome">"Doctor Name : "</string>
    <string name="noNotifications">No Notifications</string>
    <string name="sampleDate">June 2024</string>
    <string name="rightArrow">rightArrow</string>
    <string name="pick">Pick a time</string>
    <string name="confirm">Confirm Time</string>
    <string name="sendOtp">Send Otp</string>
    <string name="sure">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="logOutYes">Yes, Logout</string>
    <string name="noReporToshow">No report to show</string>
    <string name="samplePatientName">Ajitha Devadas</string>
    <string name="chooseProfile">Choose Profiles</string>

</resources>