<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".BottomNavMenus.Booking.BookAppoinmentActvity.BookAppoinmentActvity">

    <LinearLayout
        android:id="@+id/llHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <include layout="@layout/back_button" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bookAppointment"
            android:gravity="center_vertical"
            android:layout_marginStart="8dp"
            style="@style/Heading" />
    </LinearLayout>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:hint="@string/name"
        style="@style/bookingEt" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:hint="@string/age"
        style="@style/bookingEt" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="phone"
        android:autofillHints="name"
        android:hint="@string/contactNumber"
        style="@style/bookingEt" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/contactEmail"
        style="@style/bookingEt" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="19dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:paddingEnd="36dp"
            android:paddingStart="0dp"
            tools:ignore="RelativeOverlap">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>
    </RelativeLayout>

    <EditText
        android:id="@+id/etOpNum"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:autofillHints=""
        android:hint="@string/patientNumber"
        style="@style/bookingEt" />

    <TextView
        android:id="@+id/tvSpecialization"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/Specialization"
        style="@style/bookingEt"
        android:gravity="center_vertical"
        app:drawableEndCompat="@drawable/arrow_right"
        />

    <TextView
        android:id="@+id/tvDoctors"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/doctors"
        style="@style/bookingEt"
        android:gravity="center_vertical"
        app:drawableEndCompat="@drawable/arrow_right"
        />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/appointmentDate"
        style="@style/bookingEt"
        android:gravity="center_vertical"
        app:drawableEndCompat="@drawable/calender"
        />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/appointmentTime"
        style="@style/bookingEt"
        android:gravity="center_vertical"
        app:drawableEndCompat="@drawable/clock_grey"
        />

    <include
        layout="@layout/blue_button"/>


</LinearLayout>