<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NavDrawerMenus.EditProfile.EditProfileFragment">

    <LinearLayout
        android:id="@+id/llHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <include
            layout="@layout/back_button"/>

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/editProfile"
            android:gravity="center_vertical"
            android:layout_marginStart="8dp"
            style="@style/Heading"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            >
            <RelativeLayout
                android:layout_width="134dp"
                android:layout_height="134dp"
                android:layout_gravity="center"
                android:layout_marginTop="34dp"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="134dp"
                    android:layout_height="134dp"
                    android:src="@drawable/circular_profile_pic"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="8dp"
                    />

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:contentDescription="@string/profilePic"
                    android:src="@drawable/edit_icon"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="20dp"
                    />
            </RelativeLayout>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="textPersonName"
                android:autofillHints="name"
                android:hint="@string/name"
                android:drawableStart="@drawable/edit"
                style="@style/editProfileEt"
                />

            <EditText
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="number"
                android:maxLength="3"
                android:autofillHints=""
                android:hint="@string/Age"
                android:drawableStart="@drawable/edit"
                style="@style/editProfileEt"
                />

            <EditText
                android:id="@+id/etGender"
                android:layout_width="match_parent"
                android:layout_height="54dp"

                android:inputType="text"
                android:autofillHints=""
                android:hint="@string/gender"
                android:drawableStart="@drawable/gender"
                style="@style/editProfileEt"
                />

            <EditText
                android:id="@+id/etBlood"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType=""
                android:autofillHints=""
                android:hint="@string/blood"
                android:drawableStart="@drawable/blood"
                style="@style/editProfileEt"
                />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="phone"
                android:autofillHints=""
                android:hint="@string/phone"
                android:drawableStart="@drawable/call"
                style="@style/editProfileEt"
                />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                android:hint="@string/email"
                android:drawableStart="@drawable/email"
                style="@style/editProfileEt"
                />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="textPassword"
                android:autofillHints=""
                android:hint="@string/password"
                android:drawableStart="@drawable/password"
                style="@style/editProfileEt"
                />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="textPassword"
                android:autofillHints=""
                android:hint="@string/confirmPassword"
                android:drawableStart="@drawable/password"
                style="@style/editProfileEt"
                />

            <include
                layout="@layout/blue_button"/>
        </LinearLayout>



    </ScrollView>

</LinearLayout>