<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"

    android:background="@drawable/bottom_sheet_background">

    <TextView
        android:id="@+id/tvLogoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/logOut"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tvLogoutMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/cancel"
            android:textColor="@android:color/white"/>

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/logOutYes"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>
