<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="341dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    app:cardCornerRadius="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/success"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            />

        <TextView
            android:id="@+id/success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:layout_below="@id/logo"
            android:textColor="@color/primary"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tvSuccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/sampleParagraphSmall"
            android:layout_below="@id/success"
            android:textColor="@color/primary"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter"
            android:textStyle="normal"
            android:textSize="14sp"
            android:layout_marginHorizontal="24dp"
            />

        <ImageView
            android:id="@+id/ivDone"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@id/tvSuccess"
            android:contentDescription="@string/button"
            android:layout_marginTop="32dp"
            android:src="@drawable/done_button"
            android:layout_marginBottom="32dp"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>